deploy/k8/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: quagen-web
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: quagen-web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quagen-web
spec:
  selector:
    matchLabels:
      app: quagen-web
  replicas: 3
  template:
    metadata:
      labels:
        app: quagen-web
    spec:
      containers:
      - name: quagen-web
        image: $QUAGEN_DOCKER_HUB:web
        imagePullPolicy: Always
        ports:
        - containerPort: 5000      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quagen-worker
spec:
  selector:
    matchLabels:
      app: quagen-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: quagen-worker
    spec:
      containers:
      - name: quagen-worker
        image: $QUAGEN_DOCKER_HUB:worker
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-hostname: "$QUAGEN_DOMAIN"
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quagen-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - $QUAGEN_DOMAIN
    - www.$QUAGEN_DOMAIN
    secretName: quagen-tls
  rules:
  - host: $QUAGEN_DOMAIN
    http:
      paths:
      - backend:
          serviceName: quagen-web
          servicePort: 80
        path: /
